--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="teachers.html">For Teachers</a>
       <a href="students.html">For Students</a>
       <a href="fun.html">Fun</a>
-      <a href="ambassadors.html">Ambassadors</a>
+      <a href="yeah.html">Y.E.A.H. Program</a>
       <a href="blogs.html">Blogs</a>
       <a href="contact.html">Contact</a>
     </nav>
