--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
     </div>
   </section>
 
+<section id="yeah-home" class="section">
+  <h2>Get Certified in Ethical AI!</h2>
+  <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+    <p>
+      Join the <strong>Y.E.A.H. (Youth Empowerment through AI for Humanity)</strong> Program — a free 4-week virtual experience for middle and high school students.
+      Learn about ethical AI, real-world dilemmas, and how technology impacts society, while earning a
+      <strong>Certificate of Completion</strong>.
+    </p>
+    <div style="margin-top: 1.5rem;">
+      <a class="btn" href="yeah.html">Learn More & Join</a>
+    </div>
+  </div>
+</section>
+
   <section id="blogs" class="section">
     <h2>Latest Blog</h2>
     <p style="max-width: 800px; margin: 0 auto; text-align: center;">
