--- a/teachers.html
+++ b/teachers.html
@@ -52,6 +52,15 @@
     </div>
   </section>
 
+  <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+    <div style="margin-left: 1.5rem;">
+      <a class="btn" href="students.html">Explore Students GPTs</a>
+    </div>
+    <div style="margin-left: 1.5rem;">
+      <a class="btn" href="fun.html">Explore Fun GPTs</a>
+    </div>
+  </div>
+
   <footer>
     <p>&copy; 2025 YouthGood.ai — Empowering Educators with Ethical AI</p>
   </footer>
