--- a/students.html
+++ b/students.html
@@ -100,6 +100,15 @@
     </div>
   </section>
 
+  <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+    <div style="margin-left: 1.5rem;">
+      <a class="btn" href="teachers.html">Explore Teachers GPTs</a>
+    </div>
+    <div style="margin-left: 1.5rem;">
+      <a class="btn" href="fun.html">Explore Fun GPTs</a>
+    </div>
+  </div>
+
   <footer>
     <p>&copy; 2025 YouthGood.ai — Empowering Students with Ethical AI</p>
   </footer>
