--- a/fun.html
+++ b/fun.html
@@ -94,6 +94,15 @@
     </div>
   </section>
 
+  <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+    <div style="margin-left: 1.5rem;">
+      <a class="btn" href="students.html">Explore Students GPTs</a>
+    </div>
+    <div style="margin-left: 1.5rem;">
+      <a class="btn" href="teachers.html">Explore Teachers GPTs</a>
+    </div>
+  </div>
+
   <footer>
     <p>&copy; 2025 YouthGood.ai — Inspiring Youth Through Ethical AI</p>
   </footer>
