--- a/index.html
+++ b/index.html
@@ -65,29 +65,63 @@
     </div>
   </section>
 
-<section id="yeah-home" class="section">
-  <h2>Get Certified in Ethical AI!</h2>
-  <div style="max-width: 900px; margin: 0 auto; text-align: center;">
-    <p>
-      Join the <strong>Y.E.A.H. (Youth Empowerment through AI for Humanity)</strong> Program — a free 4-week virtual experience for middle and high school students.
-      Learn about ethical AI, real-world dilemmas, and how technology impacts society, while earning a
-      <strong>Certificate of Completion</strong>.
-    </p>
-    <div style="margin-top: 1.5rem;">
-      <a class="btn" href="yeah.html">Learn More & Join</a>
+  <section id="yeah-home" class="section">
+    <h2>Get Certified in Ethical AI!</h2>
+    <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+      <p>
+        Join the <strong>Y.E.A.H. (Youth Empowerment through AI for Humanity)</strong> Program — a free 4-week virtual experience for middle and high school students.
+        Learn about ethical AI, real-world dilemmas, and how technology impacts society, while earning a
+        <strong>Certificate of Completion</strong>.
+      </p>
+      <div style="margin-top: 1.5rem;">
+        <a class="btn" href="yeah.html">Learn More & Join</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <!-- Integrated Blogs Section -->
   <section id="blogs" class="section">
-    <h2>Latest Blog</h2>
-    <p style="max-width: 800px; margin: 0 auto; text-align: center;">
-      Explore insights and perspectives on ethical AI in youth education.
-    </p>
-    <div style="text-align:center; margin-top: 1.5rem;">
-      <a class="btn" href="https://medium.com/@lukasleung1/why-ethical-ai-must-start-with-youth-empowering-the-next-generation-through-tools-not-fear-7e42e42c7afc" target="_blank">
-        Read the Blog on Medium
-      </a>
+    <h2 style="text-align:center;">Latest Blogs</h2>
+    <div class="cards">
+
+      <!-- Blog 1 - Most Recent -->
+      <div class="card">
+        <img src="whyai.png" alt="What is Artificial Intelligence, Really?">
+        <h3>What is Artificial Intelligence, Really?</h3>
+        <p>
+          A deep dive into what AI truly means beyond buzzwords, exploring how it learns, thinks, and impacts our world.
+          Discover how understanding AI’s real nature helps shape its responsible future.
+        </p>
+        <a class="btn" href="https://medium.com/@lukasleung1/what-is-artificial-intelligence-really-4682f5592a88" target="_blank">
+          Read on Medium
+        </a>
+      </div>
+
+      <!-- Blog 2 -->
+      <div class="card">
+        <img src="blog-thumbnail.png" alt="Why Ethical AI Must Start With Youth">
+        <h3>Why Ethical AI Must Start With Youth</h3>
+        <p>
+          A passionate call to action for empowering the next generation through AI tools, not fear.
+          Learn why teaching students to use AI responsibly is key to building a more ethical, innovative future.
+        </p>
+        <a class="btn" href="https://medium.com/@lukasleung1/why-ethical-ai-must-start-with-youth-empowering-the-next-generation-through-tools-not-fear-7e42e42c7afc" target="_blank">
+          Read on Medium
+        </a>
+      </div>
+
+      <!-- Blog 3 -->
+      <div class="card">
+        <img src="beyondpic.png" alt="Beyond Algorithms: Who Decides What’s Fair?">
+        <h3>Beyond Algorithms: Who Decides What’s Fair?</h3>
+        <p>
+          Exploring how AI can transform classrooms, empower teachers, and inspire students, while keeping ethics and humanity at the core of learning.
+        </p>
+        <a class="btn" href="https://medium.com/@lukasleung1/beyond-algorithms-who-decides-whats-fair-875a812ea8ba" target="_blank">
+          Read on Medium
+        </a>
+      </div>
+
     </div>
   </section>
 
