--- a/blogs.html
+++ b/blogs.html
@@ -20,17 +20,50 @@
     </nav>
   </header>
 
-  <section class="hero">
-  </section>
+  <section class="hero"></section>
 
   <section class="section">
+    <h2 style="text-align:center;">Latest Blogs</h2>
     <div class="cards">
+
+      <!-- Blog 1 - Most Recent -->
+      <div class="card">
+        <img src="whyai.png" alt="What is Artificial Intelligence, Really?">
+        <h3>What is Artificial Intelligence, Really?</h3>
+        <p>
+          A deep dive into what AI truly means beyond buzzwords, exploring how it learns, thinks, and impacts our world.
+          Discover how understanding AI’s real nature helps shape its responsible future.
+        </p>
+        <a class="btn" href="https://medium.com/@lukasleung1/what-is-artificial-intelligence-really-4682f5592a88" target="_blank">
+          Read on Medium
+        </a>
+      </div>
+
+      <!-- Blog 2 -->
       <div class="card">
         <img src="blog-thumbnail.png" alt="Why Ethical AI Must Start With Youth">
         <h3>Why Ethical AI Must Start With Youth</h3>
-        <p>A passionate call to action for empowering the next generation through AI tools, not fear.</p>
-        <a class="btn" href="https://medium.com/@lukasleung1/why-ethical-ai-must-start-with-youth-empowering-the-next-generation-through-tools-not-fear-7e42e42c7afc" target="_blank">Read on Medium</a>
+        <p>
+          A passionate call to action for empowering the next generation through AI tools, not fear.
+          Learn why teaching students to use AI responsibly is key to building a more ethical, innovative future.
+        </p>
+        <a class="btn" href="https://medium.com/@lukasleung1/why-ethical-ai-must-start-with-youth-empowering-the-next-generation-through-tools-not-fear-7e42e42c7afc" target="_blank">
+          Read on Medium
+        </a>
       </div>
+
+      <!-- Blog 3 -->
+      <div class="card">
+        <img src="beyondpic.png" alt="Beyond Algorithms: Who Decides What’s Fair?">
+        <h3>Beyond Algorithms: Who Decides What’s Fair?</h3>
+        <p>
+          Exploring how AI can transform classrooms, empower teachers, and inspire students, while keeping ethics and humanity at the core of learning.
+        </p>
+        <a class="btn" href="https://medium.com/@lukasleung1/beyond-algorithms-who-decides-whats-fair-875a812ea8ba" target="_blank">
+          Read on Medium
+        </a>
+      </div>
+
     </div>
   </section>
 
