--- a/teachers.html
+++ b/teachers.html
@@ -1,68 +1,133 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For Teachers | YouthGood.ai</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <img src="youthgood-logo.png" alt="YouthGood.ai Logo" />
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="teachers.html">For Teachers</a>
-      <a href="students.html">For Students</a>
-      <a href="fun.html">Fun</a>
-      <a href="yeah.html">Y.E.A.H. Program</a>
-      <a href="blogs.html">Blogs</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+{% extends 'base.html' %}
+{% block content %}
 
-  <section class="hero"></section>
+<!-- PAGE HEADER -->
+<section class="py-5 text-center">
+  <div class="container">
+    <h2 class="fw-bold mb-3">
+      Free AI Resources for Teachers
+    </h2>
+    <p class="lead">
+      Empowering educators with practical and ethical AI tools.
+    </p>
+  </div>
+</section>
 
-  <section id="teachers" class="section">
-    <h2>Free AI Resources for Teachers</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="teacheraid.png" alt="Teacher Aid GPT">
-        <h3>Teacher Aid GPT</h3>
-        <p>Streamline lesson planning and boost classroom engagement!</p>
-        <a class="btn" href="https://chatgpt.com/g/g-vyATB7ynj-youthgood-ai-teacher-aid" target="_blank">Get Started!</a>
-      </div>
-      <div class="card">
-        <img src="educatorsk-12.png" alt="Intro to AI for Educators K-12">
-        <h3>Intro to AI for Educators K-12</h3>
-        <p>This GPT is a friendly starting guide to help K-12 educators understand and integrate AI in their classrooms.</p>
-        <a class="btn" href="https://chatgpt.com/g/g-67f71786d024819194749b84c8aeb530-intro-to-ai-educators-k-12" target="_blank">Start Using!</a>
-      </div>
-      <div class="card">
-        <img src="aitips.png" alt="Practical AI Tips for Teachers">
-        <h3>Practical AI Tips for Teachers</h3>
-        <p>A practical, supportive guide helping teachers confidently and creatively use AI tools to enhance teaching and learning.</p>
-        <a class="btn" href="https://chatgpt.com/g/g-67f72e7c1f8c81918b05343774568d63-practical-ai-tips-for-teachers" target="_blank">Start Using!</a>
-      </div>
-      <div class="card">
-        <img src="ethicalai.png" alt="Ethical AI for Educators">
-        <h3>Ethical AI for Educators</h3>
-        <p>Help teachers use AI responsibly and ethically in the classroom.</p>
-        <a class="btn" href="https://chatgpt.com/g/g-67f7094b0d0c8191ae7084194dd5b7a9-youthgood-ai-ethical-ai-guide-for-educators" target="_blank">Get Started</a>
-      </div>
-    </div>
-  </section>
+<!-- GPT CARDS -->
+<section class="pb-5">
+  <div class="container">
+    <div class="row g-4">
 
-  <div style="max-width: 900px; margin: 0 auto; text-align: center;">
-    <div style="margin-left: 1.5rem;">
-      <a class="btn" href="students.html">Explore Students GPTs</a>
-    </div>
-    <div style="margin-left: 1.5rem;">
-      <a class="btn" href="fun.html">Explore Fun GPTs</a>
+      <!-- Teacher Aid GPT -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm">
+          <img src="../static/images/teacheraid.png"
+               class="card-img-top"
+               alt="Teacher Aid GPT">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Teacher Aid GPT</h5>
+            <p class="card-text">
+              Streamline lesson planning and boost classroom engagement!
+            </p>
+            <div class="mt-auto">
+              <a href="https://chatgpt.com/g/g-vyATB7ynj-youthgood-ai-teacher-aid"
+                 target="_blank"
+                 class="btn btn-primary w-100">
+                Get Started!
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Intro to AI -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm">
+          <img src="../static/images/educatorsk-12.png"
+               class="card-img-top"
+               alt="Intro to AI for Educators K-12">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Intro to AI for Educators K-12</h5>
+            <p class="card-text">
+              A friendly starting guide to help K-12 educators integrate AI in classrooms.
+            </p>
+            <div class="mt-auto">
+              <a href="https://chatgpt.com/g/g-67f71786d024819194749b84c8aeb530-intro-to-ai-educators-k-12"
+                 target="_blank"
+                 class="btn btn-primary w-100">
+                Start Using!
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Practical AI Tips -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm">
+          <img src="../static/images/aitips.png"
+               class="card-img-top"
+               alt="Practical AI Tips for Teachers">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Practical AI Tips for Teachers</h5>
+            <p class="card-text">
+              A supportive guide helping teachers confidently use AI tools.
+            </p>
+            <div class="mt-auto">
+              <a href="https://chatgpt.com/g/g-67f72e7c1f8c81918b05343774568d63-practical-ai-tips-for-teachers"
+                 target="_blank"
+                 class="btn btn-primary w-100">
+                Start Using!
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Ethical AI -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 shadow-sm">
+          <img src="../static/images/ethicalai.png"
+               class="card-img-top"
+               alt="Ethical AI for Educators">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Ethical AI for Educators</h5>
+            <p class="card-text">
+              Help teachers use AI responsibly and ethically in the classroom.
+            </p>
+            <div class="mt-auto">
+              <a href="https://chatgpt.com/g/g-67f7094b0d0c8191ae7084194dd5b7a9-youthgood-ai-ethical-ai-guide-for-educators"
+                 target="_blank"
+                 class="btn btn-primary w-100">
+                Get Started
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
+</section>
 
-  <footer>
-    <p>&copy; 2025 YouthGood.ai — Empowering Educators with Ethical AI</p>
-  </footer>
-</body>
-</html>
+<!-- NAVIGATION BUTTONS -->
+<section class="py-5 text-center bg-dark">
+  <div class="container">
+    <div class="d-flex flex-column flex-md-row justify-content-center gap-3">
+
+      <a href="/students"
+         class="btn btn-primary btn-lg px-4">
+        Explore Student GPTs
+      </a>
+
+      <a href="/fun"
+         class="btn btn-info btn-lg px-4 text-dark">
+        Explore Fun GPTs
+      </a>
+
+    </div>
+  </div>
+</section>
+
+
+{% endblock %}
